[gd_scene load_steps=38 format=3 uid="uid://dcb7d1ukovwdc"]

[ext_resource type="Script" path="res://scene/editor/Editor.gd" id="1_nmcv3"]
[ext_resource type="PackedScene" uid="uid://ogha2bnilh12" path="res://scene/playground/Playground.tscn" id="2_ej5en"]
[ext_resource type="Script" path="res://scene/editor/Flow.gd" id="3_cepoq"]
[ext_resource type="Theme" uid="uid://d3m8pmhle7d8r" path="res://visual/theme/default_theme.tres" id="4_q1fye"]
[ext_resource type="Texture2D" uid="uid://bxj25va3uy13p" path="res://visual/ui_icon/play-button.svg" id="5_w17ql"]
[ext_resource type="Texture2D" uid="uid://b4gdb06jpschw" path="res://visual/ui_icon/pause-button.svg" id="6_d6gb4"]
[ext_resource type="Texture2D" uid="uid://wg0701ac8o4g" path="res://visual/ui_icon/hamburger-menu.svg" id="7_cl0pe"]
[ext_resource type="FontFile" uid="uid://dy4m6l0n1c0kk" path="res://visual/font/LettersLaughingAtTheirExecution-WJLG.ttf" id="8_3ns1c"]
[ext_resource type="FontFile" uid="uid://dg0mqbbbvqinh" path="res://visual/font/Alibaba-PuHuiTi-Bold.ttf" id="9_0eucq"]
[ext_resource type="ButtonGroup" uid="uid://cg56w8paqidtx" path="res://scene/editor/button_group_note_choose.tres" id="10_04fp6"]
[ext_resource type="Texture2D" uid="uid://t0wun6q7c52f" path="res://visual/texture/ring.svg" id="11_mfp24"]
[ext_resource type="Texture2D" uid="uid://myv65aaj8g4v" path="res://visual/texture/slide.svg" id="12_g5qgs"]
[ext_resource type="Texture2D" uid="uid://bq5vwdwd33o73" path="res://visual/texture/rect_box.svg" id="13_xijop"]
[ext_resource type="Texture2D" uid="uid://2k2u7yyjoqwg" path="res://visual/texture/bound.svg" id="14_e3mtp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yiivw"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxybm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4icuj"]
bg_color = Color(1, 0.901961, 0.827451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd2gn"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 0.901961, 0.831373, 0.701961)
draw_center = false
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_8xqkd"]
line_spacing = 0.0
font_size = 21
font_color = Color(0.8, 0.0980392, 0.0980392, 1)
outline_size = 10
outline_color = Color(1, 1, 1, 0.8)
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvr2v"]
bg_color = Color(0.188235, 0.341176, 0.4, 1)
border_width_top = 64
border_color = Color(0, 0.647059, 0.647059, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o2lhm"]
font = ExtResource("8_3ns1c")
font_size = 21

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnvwy"]
content_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7673"]
bg_color = Color(0, 0.75, 0.75, 1)
border_width_bottom = 6
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 12
corner_radius_bottom_right = 12
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e86mn"]
bg_color = Color(0, 0.75, 0.75, 1)
border_width_top = 12
border_width_bottom = 6
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 12
corner_radius_bottom_right = 12
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfic7"]
bg_color = Color(0, 0.75, 0.75, 1)
border_width_top = 12
border_width_bottom = 6
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 12
corner_radius_bottom_right = 12
corner_detail = 1

[sub_resource type="InputEventKey" id="InputEventKey_fvht2"]
device = -1
physical_keycode = 49
unicode = 49

[sub_resource type="InputEventKey" id="InputEventKey_ici7l"]
device = -1
keycode = 72
unicode = 104

[sub_resource type="Shortcut" id="Shortcut_wnkq3"]
events = [SubResource("InputEventKey_fvht2"), SubResource("InputEventKey_ici7l")]

[sub_resource type="InputEventKey" id="InputEventKey_hu3lb"]
device = -1
physical_keycode = 50
unicode = 50

[sub_resource type="InputEventKey" id="InputEventKey_mlon1"]
device = -1
keycode = 83
unicode = 115

[sub_resource type="Shortcut" id="Shortcut_4o111"]
events = [SubResource("InputEventKey_hu3lb"), SubResource("InputEventKey_mlon1")]

[sub_resource type="InputEventKey" id="InputEventKey_75ixi"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="InputEventKey" id="InputEventKey_xw7wb"]
device = -1
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_unanl"]
events = [SubResource("InputEventKey_75ixi"), SubResource("InputEventKey_xw7wb")]

[sub_resource type="Shortcut" id="Shortcut_cpha5"]
events = [SubResource("InputEventKey_75ixi"), SubResource("InputEventKey_xw7wb")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2v0do"]
content_margin_left = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_w6vl8"]
line_spacing = 0.0
font_size = 12
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nmcv3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yiivw")

[node name="PlaygroundControl" parent="." instance=ExtResource("2_ej5en")]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 1
scale = Vector2(0.7, 0.7)
enable_control = false

[node name="FlowBox" type="Control" parent="."]
layout_mode = 1
anchor_top = 1.0
anchor_right = 0.699653
anchor_bottom = 1.0
offset_top = -194.0
grow_horizontal = 2
grow_vertical = 0

[node name="Scroll" type="HScrollBar" parent="FlowBox"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
theme = ExtResource("4_q1fye")
step = 0.05

[node name="FlowPanel" type="Panel" parent="FlowBox"]
layout_mode = 1
offset_top = 10.0
offset_right = 806.0
offset_bottom = 194.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dxybm")
script = ExtResource("3_cepoq")

[node name="EventTag" type="Panel" parent="FlowBox/FlowPanel"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 314.0
offset_right = 316.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4icuj")

[node name="Label" type="Label" parent="FlowBox/FlowPanel/EventTag"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 1
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_bd2gn")
text = "Start"
label_settings = SubResource("LabelSettings_8xqkd")

[node name="PlayLine" type="Control" parent="FlowBox"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="FlowBox/PlayLine"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -3.00015
offset_right = -0.000152588
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.8)

[node name="SliderProgress" type="VSlider" parent="FlowBox"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0003
offset_top = 10.0
offset_right = -0.000305176
grow_horizontal = 0
grow_vertical = 2
step = 0.05

[node name="Edit" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tvr2v")
metadata/_edit_use_anchors_ = true

[node name="VBox" type="VBoxContainer" parent="Edit"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="HBoxPlayback" type="HBoxContainer" parent="Edit/VBox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ButtonPlay" type="TextureButton" parent="Edit/VBox/HBoxPlayback"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
texture_normal = ExtResource("5_w17ql")
texture_pressed = ExtResource("6_d6gb4")
ignore_texture_size = true
stretch_mode = 5

[node name="ButtonMenu" type="Button" parent="Edit/VBox/HBoxPlayback"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
icon = ExtResource("7_cl0pe")
flat = true
icon_alignment = 1
expand_icon = true

[node name="LabelTime" type="Label" parent="Edit/VBox"]
layout_mode = 2
size_flags_horizontal = 6
text = "00 00 00 : 00 00 00"
label_settings = SubResource("LabelSettings_o2lhm")

[node name="Scroll" type="ScrollContainer" parent="Edit/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_qnvwy")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBox" type="VBoxContainer" parent="Edit/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxMap" type="VBoxContainer" parent="Edit/VBox/Scroll/VBox"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_t7673")
text = "Map Setting"
horizontal_alignment = 1

[node name="HBoxAction" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="ButtonSave" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAction"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="ButtonExit" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAction"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="HBoxTitle" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxTitle"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "title"

[node name="LineEdit" type="LineEdit" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxTitle"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxTitleLatin" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxTitleLatin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "title_latin"

[node name="LineEdit" type="LineEdit" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxTitleLatin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxAuthor" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAuthor"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "singer"

[node name="LineEdit" type="LineEdit" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAuthor"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxAuthorLatin" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAuthorLatin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "singer_latin"

[node name="LineEdit" type="LineEdit" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAuthorLatin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxMapper" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxMapper"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "mapper"

[node name="LineEdit" type="LineEdit" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxMapper"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxDiff" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxDiff"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "diffculty"

[node name="SpinBox" type="SpinBox" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxDiff"]
layout_mode = 2
max_value = 7.0
step = 0.5

[node name="HBoxMapname" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxMapname"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "mapname"

[node name="LineEdit" type="LineEdit" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxMapname"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxAudio" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAudio"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "audio (bgm)"

[node name="Button" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxAudio"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
text_overrun_behavior = 3

[node name="HBoxVideo" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxVideo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "video (bga)"

[node name="Button" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxVideo"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
text_overrun_behavior = 3

[node name="HBoxBpm" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxBpm"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "bpm"

[node name="SpinBox" type="SpinBox" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxBpm"]
layout_mode = 2
min_value = 1.0
max_value = 300.0
value = 80.0
allow_greater = true

[node name="HBoxBg" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxMap"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxBg"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "bg (cover)"

[node name="Button" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxMap/HBoxBg"]
layout_mode = 2
size_flags_horizontal = 3
text = "null"
text_overrun_behavior = 3

[node name="VBoxEditor" type="VBoxContainer" parent="Edit/VBox/Scroll/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEditor"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_e86mn")
text = "Editor Setting"
horizontal_alignment = 1

[node name="HBoxScale" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxEditor"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEditor/HBoxScale"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "FlowSize"

[node name="HSlider" type="HSlider" parent="Edit/VBox/Scroll/VBox/VBoxEditor/HBoxScale"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 20.0
max_value = 800.0
value = 120.0
exp_edit = true

[node name="HBoxBeats" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxEditor"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEditor/HBoxBeats"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Beats"

[node name="SpinBox" type="SpinBox" parent="Edit/VBox/Scroll/VBox/VBoxEditor/HBoxBeats"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxBgDark" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxEditor"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEditor/HBoxBgDark"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Bg Dark"

[node name="HSlider" type="HSlider" parent="Edit/VBox/Scroll/VBox/VBoxEditor/HBoxBgDark"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 11

[node name="VBoxEvent" type="VBoxContainer" parent="Edit/VBox/Scroll/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEvent"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_dfic7")
text = "Event Setting"
horizontal_alignment = 1

[node name="NoteChoose" type="HFlowContainer" parent="Edit/VBox/Scroll/VBox/VBoxEvent"]
layout_mode = 2
alignment = 1

[node name="Hit" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxEvent/NoteChoose"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
tooltip_text = "Hit"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.501961, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_0eucq")
theme_override_font_sizes/font_size = 29
toggle_mode = true
button_pressed = true
button_group = ExtResource("10_04fp6")
shortcut = SubResource("Shortcut_wnkq3")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "H"
icon = ExtResource("11_mfp24")
icon_alignment = 1
expand_icon = true

[node name="Slide" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxEvent/NoteChoose"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Slide"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0.74902, 0.72549, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_0eucq")
theme_override_font_sizes/font_size = 29
toggle_mode = true
button_group = ExtResource("10_04fp6")
shortcut = SubResource("Shortcut_4o111")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "S"
icon = ExtResource("12_g5qgs")
icon_alignment = 1
expand_icon = true

[node name="Cross" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxEvent/NoteChoose"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Cross"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.968627, 0.823529, 0.0196078, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_0eucq")
theme_override_font_sizes/font_size = 29
toggle_mode = true
button_group = ExtResource("10_04fp6")
shortcut = SubResource("Shortcut_unanl")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "C"
icon = ExtResource("13_xijop")
icon_alignment = 1
expand_icon = true

[node name="Bounce" type="Button" parent="Edit/VBox/Scroll/VBox/VBoxEvent/NoteChoose"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Bound"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.968627, 0.823529, 0.0196078, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("9_0eucq")
theme_override_font_sizes/font_size = 29
toggle_mode = true
button_group = ExtResource("10_04fp6")
shortcut = SubResource("Shortcut_cpha5")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "B"
icon = ExtResource("14_e3mtp")
icon_alignment = 1
expand_icon = true

[node name="LabelInfo" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEvent"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_2v0do")
text = "-- Info --
Time: 00:00:000 (0.000)
Type: Hit
Pos: x° ~ x°"

[node name="HBoxSide" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxEvent"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEvent/HBoxSide"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "TrackSide"

[node name="OptionSide" type="OptionButton" parent="Edit/VBox/Scroll/VBox/VBoxEvent/HBoxSide"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 0
popup/item_0/text = "Left"
popup/item_0/id = 0
popup/item_1/text = "Right"
popup/item_1/id = 1

[node name="HBoxPos" type="HBoxContainer" parent="Edit/VBox/Scroll/VBox/VBoxEvent"]
layout_mode = 2

[node name="Label" type="Label" parent="Edit/VBox/Scroll/VBox/VBoxEvent/HBoxPos"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.85
text = "Position"

[node name="SpinStart" type="SpinBox" parent="Edit/VBox/Scroll/VBox/VBoxEvent/HBoxPos"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -360.0
max_value = 360.0
step = 5.0
suffix = "°"

[node name="SpinEnd" type="SpinBox" parent="Edit/VBox/Scroll/VBox/VBoxEvent/HBoxPos"]
layout_mode = 2
size_flags_horizontal = 4
min_value = -360.0
max_value = 360.0
step = 5.0
suffix = "°"

[node name="DebugLabel2" type="Label" parent="."]
layout_mode = 1
offset_right = 191.0
offset_bottom = 32.0
text = "※ 视频进度更改在编辑器中不受支持！
（如需预览请拖动进度到第0秒再播放）"
label_settings = SubResource("LabelSettings_w6vl8")
horizontal_alignment = 2
